# ai

./: .gitignore  aix94_done.md  pytest.ini  test_executor.py  项目文档.md
backend/: __init__.py  db_setup.py  desktop.py  entry.py  requirements.txt  server.py
backend/app/: __init__.py  config.py  database.py  db.py  main.py
backend/core/: cache.py  config.py  constants.py
backend/data/: nodes.json
backend/engine/: engine.py  engine_process.py  input_sim.py  node_engine.py  process_manager.py  vision.py
backend/routes/: nodes.py  presets.py  run.py
backend/services/: __init__.py  (+3 more)
data/: presets.json
database/: __init__.py  models.py  schema.sql
deploy/: Dockerfile  build.ps1  docker-compose.yml  nginx.conf
desktop/: build-desktop.ps1  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  plugin-api.md  progress.md  reviewer-assessment.md  test-coverage.md  需求总纲.md
engine/: __init__.py
frontend/: index.html  package-lock.json  package.json  tokens.css  vite.config.ts
icon-gen/: generate-v4.js  generate-v5.js  icon-v5-preview.html  icon-v5-view.html  package-lock.json  package.json  screenshot-v5-compare.js  screenshot-v5-html.js  screenshot-v5-preview.js  screenshot-v5.js
scripts/: seed_presets.py
tests/: __init__.py  conftest.py  integration_test.py
ui-design/: design-tokens.md
(+162 files in other folders)
